# cloudpulse

./: .gitignore  README.md  run.sh  run_integrator.sh
cloudpulse_dashboard/: .env  app.py
cloudpulse_dashboard/systemd/: cloudpulse_dashboard.service
cloudpulse_dashboard/templates/: index.html
config/: config_template.json
cpp/: CMakeLists.txt  monitor.cpp.bak  monitor_mariadb.cpp  monitor_mariadb.cpp.bak
python/: integrator.py
sql/: schema.sql
systemd/: cloudmonitor.service
